changed baseuri for auth service integration

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -43,7 +43,7 @@ eureka:
 # Integration service URLs
 services:
   auth-service:
-    base-url: http://ts-auth-service
+    base-url: http://ts-api-gateway
   user-service:
     base-url: http://ts-user-service
   address-service:
