Updated AuthServiceIntegration and configuration files to modify the auth-service base URL, ensuring correct endpoint usage for user registration in development and production environments.

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -45,7 +45,7 @@ eureka:
 # Integration service URLs
 services:
   auth-service:
-    base-url: https://dev.tinystepscdc.com/auth/api/auth/register
+    base-url: https://dev.tinystepscdc.com/auth
   user-service:
     base-url: http://ts-user-service
   address-service:
