--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -45,7 +45,7 @@ eureka:
 # Integration service URLs
 services:
   auth-service:
-    base-url: https://tinystepscdc.com/auth/api/auth/register
+    base-url: https://tinystepscdc.com/auth
   user-service:
     base-url: http://ts-user-service
   address-service:
